<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="get_location_error">Error: unable to get current location</string>
    <string name="search">Search</string>

    <!-- PermissionsUtils -->
    <string name="permissions_dialog_title">Missing permissions</string>
    <string name="permissions_dialog_message">Location is required for this app components to work.</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>

    <!-- Login Activity -->
    <string name="main_activity_sub_title">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="facebook_login_button">Sign in with Facebook</string>
    <string name="google_login_button">Sign in with Google</string>
    <string name="twitter_login_button">Sign in with Twitter</string>
    <string name="create_account">or create an account…</string>
    <string name="sign_in_canceled">Sign in canceled</string>
    <string name="unknown_sign_in_error">Unknown error: could not sign in</string>
    <string name="email_already_linked_title">Email address already linked to an existing account.</string>
    <string name="email_already_linked_message">&#160;is already linked to an existing account via Google sign in.
        \nWould you like to log in to your Google account to link %1$s sign in method to your Go4Lunch account ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Login alert dialog -->
    <string name="provide_email_password">Provide a valid e-mail and password</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="email_address">E-mail address *</string>
    <string name="password">Password *</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>

    <!-- Main Activity -->
    <string name="search_bar_hint">Search restaurant</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_lunch">Your lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Bottom navigation -->
    <string name="map_view_name">Map View</string>
    <string name="list_view_name">List View</string>
    <string name="workmates_name">Workmates</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>
    <string name="map_view_title">I\'m Hungry!</string>
    <string name="list_view_title">I\'m Hungry!</string>
    <string name="workmates_title">Available workmates</string>

    <!-- MapView Fragment -->
    <string name="localize_device_button">Localize device button</string>

    <!-- ListView Fragment -->
    <string name="no_restaurants_found">No restaurants found</string>
    <string name="location_is_disabled">Location is disabled</string>

    <!-- Workmates Fragment -->
    <string name="has_decided">%1$s is eating at %2$s.</string>
    <string name="has_not_decided">%1$s hasn\'t decided yet.</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="info_not_available">Information not available</string>

    <!-- RestaurantDetails Activity -->
    <string name="is_joining">%1$s is joining!</string>
    <string name="no_restaurant_selected">You have not selected a restaurant yet</string>
    <string name="no_website">No website available</string>
    <string name="no_phone_number">No phone number available</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="website">Website</string>
    <string name="select_restaurant_button">Select restaurant button</string>

    <!-- Notifications Service -->
    <string name="lunch_time_notification_title">Lunch time!</string>
    <string name="lunch_at">You\'re having lunch at:</string>
    <string name="address">Address:</string>
    <string name="with">With:</string>


    <!-- CHAT FRAGMENT -->
    <string name="chat_empty">The chat is empty.</string>
    <string name="compose_your_message">Compose your message …</string>
    <string name="send">Send</string>
    <string name="popup_title_perm_access">This application need permissions to work correctly.</string>
    <string name="toast_title_no_image_chosen">No selected image!</string>


    <!-- Settings Activity -->
    <string name="notification_settings">Notification settings</string>
    <string name="activate_lunch_time_notifications">Activate lunch time notifications</string>
    <string name="user_information">User information</string>
    <string name="information_updated">User information updated</string>
    <string name="error_information_not_updated">Error: could not update user information</string>
    <string name="change_name">Update your name</string>
    <string name="change_profile_picture">Update profile picture</string>
    <string name="confirm_changes">Confirm updates</string>
    <string name="facebook_app_id">215891496602107</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>