<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RestaurantDetailsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_details_photo_image_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/bg_login_background" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/restaurant_details_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/average_margin"
        android:onClick="onClick"
        android:src="@drawable/ic_check_circle_grey"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/texts_constraint_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/select_restaurant_button"
        app:layout_constraintTop_toBottomOf="@id/restaurant_details_photo_image_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/texts_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="@dimen/small_padding"
        android:paddingTop="@dimen/small_padding"
        android:paddingEnd="@dimen/small_padding"
        android:paddingBottom="@dimen/large_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_details_photo_image_view">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/restaurant_details_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/very_large_text_size"
            app:layout_constraintEnd_toStartOf="@id/restaurant_details_rating_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Le Zinc" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/restaurant_details_rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/average_margin"
            android:numStars="3"
            android:theme="@style/RatingBar"
            app:layout_constraintBottom_toBottomOf="@id/restaurant_details_name_text_view"
            app:layout_constraintStart_toEndOf="@id/restaurant_details_name_text_view"
            app:layout_constraintTop_toTopOf="@id/restaurant_details_name_text_view"
            tools:rating="2"
            android:layout_marginLeft="@dimen/average_margin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/restaurant_details_vicinity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/very_small_margin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurant_details_name_text_view"
            tools:text="French restaurant - 12 rue du Faubourg Poissonière" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_background_underlined_bottom"
        android:paddingBottom="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texts_constraint_layout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/restaurant_details_call_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableTop="@drawable/ic_phone"
            android:drawablePadding="@dimen/small_padding"
            android:onClick="onClick"
            android:padding="@dimen/average_padding"
            android:text="@string/call"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/restaurant_details_like_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/restaurant_details_like_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableTop="@drawable/ic_star_orange"
            android:drawablePadding="@dimen/small_padding"
            android:onClick="onClick"
            android:padding="@dimen/average_padding"
            android:text="@string/like"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/restaurant_details_website_button"
            app:layout_constraintStart_toEndOf="@id/restaurant_details_call_button"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/restaurant_details_website_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableTop="@drawable/ic_globe"
            android:drawablePadding="@dimen/small_padding"
            android:onClick="onClick"
            android:padding="@dimen/average_padding"
            android:text="@string/website"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/restaurant_details_like_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurant_details_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_constraint_layout"
        tools:listitem="@layout/cell_restaurant_details" />

</androidx.constraintlayout.widget.ConstraintLayout>
